        - vcdb.c: use open/read/close instead of stream based
          fopen/fread/fclose in vauth_getpw. Slightly more efficent.
        - file_lock.c change get_write_lock to use file descriptor
          instead of FILE *;
        - vpopmail.c: for locks, use open/close instead of fopen/fclose
        - vcdb.c: for locks, use open/close instead of fopen/fclose

	Michael Bowe
	- Minor documentation tweaks

5.5.0 - released 11-Mar-04

	Tom Collins
	- Consolidate table creation code in vmysql.c and vpgsql.c.
	- Increase SQL_BUF_SIZE from 600 to 2048 for Oracle, Postgres
	  and Sybase.
	- Add qnprintf() to vpopmail.c for escaping strings in SQL queries.
	- Use qnprintf() when building queries in vmysql.c, vpgsql.c,
	  voracle.pc, and vsybase.c.
	- Multiple fixes to vpgsql.c related to freeing PGresults and
	  attempting to access NULL PGresults when reporting errors.

5.4.3 - released 11-Mar-04

	Tom Collins
	- Add missing link libs (m, nsl, socket) on Solaris installs.
	- Fix vsetuserquota() to write properly formatted quota to 
	  maildirsize file.
	- Update vdominfo to ignore non-domains in users/assign.
	- Update vconvert and dotqmail2valias to ignore non-domains in
	  users/assign.

5.4.2 - released 22-Feb-04

	Tom Collins
	- Remove attempts to free() static buffers in vpgsql.c. [888888]
	- Fix problems with creating valias table in vpgsql.c. [892595]
	- Remove unnecessary check for C++ from configure[.in].
	- Don't include DESTDIR when building inc_deps and lib_deps.
	  [886988]
	- Properly parse Maildir and mbox delivery lines in .qmail files
	  in vdelivermail (and exit(111) for mbox lines). [889756]
	- Temporarily disable -s option to vadduser (since it's broken).
	  [895375]

	Anders Brander
	- Add contrib/checkpassword_debug.[README,c] for testing and
	  debugging problems with vchkpw. [862608]

5.4.1 - released 10-Feb-04

	Tom Collins
	- Add dotqmail2valias program for converting .qmail-alias files
	  to valias table entries.

5.4.0 - released 1-Feb-04
